# lunabot

./: .gitignore  README.md  colcon.pkg  drive_via_gazebo_service.py  goal.yaml  launch_all.sh  send_goal.py  send_goal_once.py  start_nav2_screen.sh
docs/: README.md  usage.md
scripts/: run_demo_record.sh  run_gazebo_spawn.sh  run_smoke_test.sh
src/lunabot_alerts/: README.md
src/lunabot_base/: README.md  package.xml  setup.cfg  setup.py
src/lunabot_base/launch/: base.launch.py
src/lunabot_base/lunabot_base/: __init__.py
src/lunabot_bringup/: README.md  package.xml  package.xml.bak  setup.py
src/lunabot_bringup/launch/: bringup.launch.py  full_bringup.launch.py  smoke_test.launch.py
src/lunabot_bringup/lunabot_bringup/: __init__.py
src/lunabot_description/: CMakeLists.txt  README.md  package.xml
src/lunabot_description/env-hooks/: lunabot_description.dsv
src/lunabot_description/launch/: display.launch.py  display.rviz
src/lunabot_description/urdf/: lunabot.urdf.xacro  materials.xacro
src/lunabot_environment_monitor/: README.md
src/lunabot_hazard_detection/: README.md  setup.py
src/lunabot_hazard_detection/lunabot_hazard_detection/: hazard_alert_bridge.py  hazard_demo_pub.py  hazard_inference.py  hazard_onnx_node.py
src/lunabot_localization/: README.md  package.xml  package.xml.bak
src/lunabot_localization/config/: amcl.yaml
src/lunabot_localization/launch/: localization.launch.py
src/lunabot_mapping/: README.md  package.xml  package.xml.bak  setup.py
src/lunabot_mapping/config/: cartographer.lua
src/lunabot_mapping/launch/: mapping.launch.py
src/lunabot_navigation/: README.md  package.xml  package.xml.bak  setup.py
src/lunabot_navigation/config/: nav2.yaml  navigate_w_replanning_and_recovery.xml
src/lunabot_navigation/launch/: navigation.launch.py
src/lunabot_patrol/: README.md
src/lunabot_perception/: README.md  package.xml  package.xml.bak  setup.py
src/lunabot_sim/: README.md  package.xml  setup.py
src/lunabot_sim/launch/: spawn_in_world.launch.py
src/lunabot_sim/lunabot_sim/: __init__.py
src/lunabot_sim/resource/: lunabot_sim
src/lunabot_sim/worlds/: mars.world
src/lunabot_state_estimation/: README.md  package.xml  package.xml.bak  setup.py
src/lunabot_tests/: README.md
(+11 files in other folders)
