<?xml version="1.0"?>
<package format="3">
  <name>lunabot_base</name>
  <version>0.1.0</version>
  <description>Base drivers and odometry for LunaBot.</description>
  <maintainer email="you@example.com">LunaBot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
