<?xml version="1.0"?>
<package format="3">
  <name>lunabot_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 configuration for LunaBot.</description>
  <maintainer email="you@example.com">LunaBot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_recoveries</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
