<?xml version=1.0?>
<package format=3>
  <name>lunabot_sim</name>
  <version>0.1.0</version>
  <description>Simulation assets and Gazebo launch.</description>
  <maintainer email=you@example.com>LunaBot</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
